fixed gap in vll

--- a/src/Components/ViewListsModal/viewlistsmodal.css
+++ b/src/Components/ViewListsModal/viewlistsmodal.css
@@ -9,7 +9,7 @@
 .vll {
   border-left: 3px solid var(--gray-white);
   margin: 0;
-  height: 163%;
+  height: 200%;
   opacity: 100%;
 }
 
